Add CSS e logica de dropdowns

--- a/CoinApp-Visualizer/index.html
+++ b/CoinApp-Visualizer/index.html
@@ -1,5 +1,11 @@
+<head><link rel="stylesheet" href="/css/mystyle.css">
+</head>
 <body>
 <main></main>
+<select name="moedaBase" id="moedaBase"></select>
+<input type="text" id="moedaFrom" name="moedaFrom"> 
+<select name="moedaAConverter" id="moedaAConverter"></select>
+<input type="text" id="moedaTo" name="moedaTo"><br><br>
 </body>
 
 <script>
@@ -8,7 +14,12 @@
             const responseAPI = await fetch('http://localhost:8765/COIN-APP/listarMoedas')
             const dataAPI = await responseAPI.json()
 
-            listarMoedas(dataAPI)
+            const responseAPI2 = await fetch('http://localhost:8765/COIN-APP/moedasDisponiveis')
+            const dataAPI2 = await responseAPI2.json()
+            
+
+            listarMoedasParaReal(dataAPI)
+            preencherDropdown(dataAPI2)
         }catch( error ){
             console.log( "GetContentAPI | ", error );
         }
@@ -16,10 +27,37 @@
 
     getContentAPI()
 
-    function listarMoedas(dados){
+    function preencherDropdown(dados){
+        var selectMoedaBase = document.getElementById("moedaBase");
+        var selectMoedaAConverter = document.getElementById("moedaAConverter");
+
+        for( let dado of dados ){
+            selectMoedaBase.options[selectMoedaBase.options.length] = new Option(dado, dado);
+            selectMoedaAConverter.options[selectMoedaAConverter.options.length] = new Option(dado, dado);
+        }
+
+    }
+    function listarMoedasParaReal(dados){
         let output = ''
         for( let dado of dados){
-            output +=`<li>conversão:${dado.name} | Valor: ${dado.bid}</li>`
+             output +=` ${dado.name} -----> Valor: ${dado.bid}<br>`;
+            var moedaTo = document.getElementById("moedaTo");
+            var moedaFrom = document.getElementById("moedaFrom");
+            var moedaToLabel = document.getElementById("moedaToLabel");
+            var moedaFromLabel = document.getElementById("moedaFromLabel");
+            if(`${dado.code}` == "USD"){
+                moedaFrom.value = (`1.00`).toLocaleString('pt-br',{minimumFractionDigits: 2});
+
+                moedaTo.value =moedaFrom.value * `${dado.bid}`;
+
+
+                moedaFrom.addEventListener('input', function (evt) {
+                    moedaFrom.value.toLocaleString('pt-br',{minimumFractionDigits: 2});
+
+                    moedaTo.value =(moedaFrom.value * `${dado.bid}`).toLocaleString('pt-br',{minimumFractionDigits: 2});
+
+                                });
+            } 
         }
 
         document.querySelector('main').innerHTML = output
